feat: add pricing section with Free, Pro, and Enterprise plans

--- a/index.html
+++ b/index.html
@@ -77,6 +77,38 @@
     </div>
   </div>
 </section>
+<!-- Pricing Section -->
+<section class="max-w-6xl mx-auto px-6 py-16 text-center">
+  <h2 class="text-3xl font-bold mb-2">Pricing Plans</h2>
+  <p class="text-gray-600 mb-12">Choose the plan that fits your needs.</p>
+
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+    <!-- Free Plan -->
+    <div class="bg-white rounded-xl shadow-md p-6">
+      <h3 class="text-xl font-semibold mb-2">Free</h3>
+      <p class="text-4xl font-bold mb-2">$0<span class="text-lg">/month</span></p>
+      <p class="text-gray-600 mb-6">Basic features for personal projects.</p>
+      <button class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Get Started</button>
+    </div>
+
+    <!-- Pro Plan -->
+    <div class="bg-blue-50 border-2 border-blue-600 rounded-xl p-6 shadow-lg">
+      <h3 class="text-xl font-semibold mb-2">Pro</h3>
+      <p class="text-4xl font-bold mb-2">$12<span class="text-lg">/month</span></p>
+      <p class="text-gray-600 mb-6">Advanced features for professionals.</p>
+      <button class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Upgrade</button>
+    </div>
+
+    <!-- Enterprise Plan -->
+    <div class="bg-white rounded-xl shadow-md p-6">
+      <h3 class="text-xl font-semibold mb-2">Enterprise</h3>
+      <p class="text-4xl font-bold mb-2">$49<span class="text-lg">/month</span></p>
+      <p class="text-gray-600 mb-6">Full power for large teams.</p>
+      <button class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Contact Sales</button>
+    </div>
+  </div>
+</section>
+
 
   </body>
 </html>
