feat: add CTA section with headline, subheadline, and trial button

--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
     </div>
   </div>
 </section>
+<!-- Call To Action -->
+<section class="bg-blue-600 text-white text-center py-16 px-6">
+  <h2 class="text-3xl font-bold mb-4">Ready to get started?</h2>
+  <p class="text-lg mb-6">Join thousands of developers using TechFlow today.</p>
+  <button class="bg-white text-blue-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition">
+    Start Free Trial
+  </button>
+</section>
 
 
   </body>
