feat: add footer with copyright, links, and socials

--- a/index.html
+++ b/index.html
@@ -116,6 +116,27 @@
     Start Free Trial
   </button>
 </section>
+<!-- Footer -->
+<footer class="bg-gray-900 text-gray-400 py-8">
+  <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
+    
+    <!-- Left -->
+    <p>© 2025 TechFlow. All rights reserved.</p>
+    
+    <!-- Links -->
+    <div class="flex gap-6">
+      <a href="#" class="hover:text-white">Privacy Policy</a>
+      <a href="#" class="hover:text-white">Terms of Service</a>
+    </div>
+
+    <!-- Socials -->
+    <div class="flex gap-6 text-xl">
+      <a href="#" class="hover:text-white">🐦</a>
+      <a href="#" class="hover:text-white">💻</a>
+      <a href="#" class="hover:text-white">🔗</a>
+    </div>
+  </div>
+</footer>
 
 
   </body>
