style: improve layout spacing, responsiveness, and hover effects

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
     
     <!-- Left -->
-    <p>© 2025 TechFlow. All rights reserved.</p>
+    <p>&copy; 2025 TechFlow. All rights reserved.</p>
     
     <!-- Links -->
     <div class="flex gap-6">
